--- a/base.html
+++ b/base.html
@@ -149,10 +149,12 @@
         border-right-width: 1px;
         ">
             <div class="icon" style="margin-bottom: 8px;">
-                <img style="border-radius: 100px;border: 1px solid white;" src="https://res.cloudinary.com/good-assistant/image/upload/v1625845045/avatar/r9ykvittktjz2gsluku8.jpg" alt="Avatar" width="100" height="100">
+                <img style="border-radius: 100px;border: 1px solid white;" 
+                src= "https://res.cloudinary.com/good-assistant/image/upload/v1625845365/avatar/jxvswvdssyjedva5eql7.jpg"
+                alt="Avatar" width="100" height="100">
             </div>
                 <hr>
-                <h1  class="title">NGUYỄN VĂN A</h1>
+                <h1  class="title">NGUYỄN Vân bích</h1>
                 <h3 style="align-self: center;">NHâN VIÊN KINH DOANH</h3>
                 <div class="icon margin-padding">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
@@ -166,7 +168,7 @@
                 <ul class="profile myself margin-base">
                     <li>
                         <span>giới tính</span>
-                        <span>nam</span>
+                        <span>nữ</span>
                     </li>
                     <li>
                         <span>Ngày sinh</span>
@@ -220,8 +222,10 @@
                 </div>
                 <hr>
                 <h2 class="title">NGƯỜI THAM KHẢO</h2>
-                <h3 class="margin-base">NGUYÊN VĂN B</h3>
                 <ul class="profile margin-base">
+                    <li>
+                        <h3>NGUYÊN VĂN B</h3>
+                    </li>
                     <li>
                         <span>Công ty</span>:
                         <span>Công ty CP ABC</span>
@@ -258,8 +262,10 @@
                 </div>
                 <hr>
                 <h2 class="title">kinh nghiệm</h2>
-                <h3 class="margin-base">03-2015 - 02-2016 : TEAM LEAD</h3>
                 <ul class="profile margin-base">
+                    <li>
+                        <h3 class="margin-base">03-2015 - 02-2016 : TEAM LEAD</h3>
+                    </li>
                     <li>
                         <span>Công ty</span>:
                         <span>Công ty CP ABC</span>
@@ -282,8 +288,10 @@
                 </div>
                 <hr>
                 <h2 class="title">học vấn</h2>
-                <h3 class="margin-base">07-2011 - 01 -2015 : HỌC VIỆN TÀI CHÍNH</h3>
                 <ul class="profile margin-base">
+                    <li>
+                        <h3 class="margin-base">07-2011 - 01 -2015 : HỌC VIỆN TÀI CHÍNH</h3>
+                    </li>
                     <li>
                         <span>chuyên ngành</span>:
                         <span>tài chính ngân hàng</span>
@@ -304,8 +312,10 @@
                 </div>
                 <hr>
                 <h2 class="title">ngoại ngữ</h2>
-                <h3 class="margin-base" >tiếng anh</h3>
                 <ul class="profile language margin-base">
+                    <li>
+                        <h3 class="margin-base" >tiếng anh</h3>
+                    </li>
                     <li>
                         <span>nghe</span>
                         <div class="bar-border">
