--- a/base.html
+++ b/base.html
@@ -166,6 +166,14 @@
                 <hr>
                 <h2 class="title">thông tin</h2>
                 <ul class="profile myself margin-base">
+				    <li>
+                        <span>Email</span>
+                        <span>abc@email.com</span>
+                    </li>
+					<li>
+                        <span>CCCD</span>
+                        <span>078123087456</span>
+                    </li>
                     <li>
                         <span>giới tính</span>
                         <span>nữ</span>
@@ -173,10 +181,6 @@
                     <li>
                         <span>Ngày sinh</span>
                         <span>08-11-1996</span>
-                    </li>
-                    <li>
-                        <span>Email</span>
-                        <span>abc@email.com</span>
                     </li>
                     <li>
                         <span>Điện thoại</span>
