--- a/en/broccoli.html
+++ b/en/broccoli.html
@@ -165,7 +165,15 @@
                 </div>
                 <hr>
                 <h2 class="title">personal information</h2>
-                <ul class="profile myself margin-base">
+                <ul class="profile myself margin-base">				
+                    <li>
+                        <span>Email</span>
+                        <span>{email}</span>
+                    </li>
+                    <li>
+                        <span>Citizen ID</span>
+                        <span>{citizenID}</span>
+                    </li>
                     <li>
                         <span>gender</span>
                         <span>{gender}</span>
@@ -173,10 +181,6 @@
                     <li>
                         <span>birthday</span>
                         <span>{birthday}</span>
-                    </li>
-                    <li>
-                        <span>Email</span>
-                        <span>{email}</span>
                     </li>
                     <li>
                         <span>phone</span>
