--- a/vi/broccoli.html
+++ b/vi/broccoli.html
@@ -167,16 +167,20 @@
                 <h2 class="title">thông tin</h2>
                 <ul class="profile myself margin-base">
                     <li>
+                        <span>Email</span>
+                        <span>{email}</span>
+                    </li>
+					<li>
+                        <span>CCCD</span>
+                        <span>{citizen_id}</span>
+                    </li>
+					<li>
                         <span>giới tính</span>
                         <span>{gender}</span>
                     </li>
                     <li>
                         <span>Ngày sinh</span>
                         <span>{birthday}</span>
-                    </li>
-                    <li>
-                        <span>Email</span>
-                        <span>{email}</span>
                     </li>
                     <li>
                         <span>Điện thoại</span>
