--- a/verification.html
+++ b/verification.html
@@ -7,89 +7,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=0">
     <title>TapCode App</title>
 
-    <style>
-    body {
-        font-family: Arial, Helvetica, sans-serif;
+</head>
+
+<body>
+    <div style="max-width: 700px; margin:auto;  padding: 50px 20px; font-family: Arial, Helvetica, sans-serif; font-size: 110%;">
+        <div style="display: flex;
+            justify-content: center;
+            flex-direction: row; 
+            align-items: center;
+            margin: 0px 20px;">
+            <img src="https://raw.githubusercontent.com/LayThankTon/resume_templates/main/asset/taplogo512.png"
+                width="80" height="80" >
+            <h1 style="font-weight: bold;
+                font-size: 30px;
+                line-height: 40px;
+                padding: 0px 8px;
+                color:teal;
+                margin: 0px;">Tapcode</h1>
+        </div>
+        <h2 style=" text-transform: uppercase;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 26px;
+        padding: 0px 8px;
         background-color: white;
-        color: teal;
         margin: 0px;
-        padding: 0px;
-    }
+        text-align: center; ;color: teal;">Welcome to the resume creator app</h2>
+        <hr style="
+        width: 100%;
+        margin: 0px;
+        margin-top: 16px;
+        border-top: 1px solid teal;">
 
-    div {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-
-    h1 {
+        <p style="font-size: 16px;
+        line-height: 26px;
+        padding: 0px 8px;
+        margin: 0px;
+        margin-top: 16px;">Your verification code is:</p>
+        <h1 style="
         font-weight: bold;
         font-size: 30px;
         line-height: 40px;
         padding: 0px 8px;
-        background-color: white;
+        background-color: teal;
         margin: 0px;
-    }
-
-    h2 {
-        text-transform: uppercase;
+        text-align: center; text-decoration: none; color: white; padding: 10px 20px; margin: 10px 0; display: inline-block; border-radius: 10px;">123456</h1>
+        <p style="font-size: 16px;
+        line-height: 26px;
+        padding: 0px 8px;
+        margin: 0px;
+        margin-top: 3px;">Once your account is activated, you can start using all the features of the Resume Creator App.</p>
+        <p style="font-size: 16px;
+        line-height: 26px;
+        padding: 0px 8px;
+        margin: 0px;
+        margin-top: 3px;">You received this email because you recently created a new Tapcode account or requested a password reset. If this is not you, please ignore this email.</p>
+        <p style="font-size: 16px;
+        line-height: 26px;
+        padding: 0px 8px;
+        margin: 0px;
+        margin-top: 3px;">If you have any questions, please contact help@tapcode.cf</p>
+        <hr style="
+        width: 100%;
+        margin: 0px;
+        margin-top: 16px;
+        border-top: 1px solid teal;">
+        <h2 style="
         font-weight: bold;
         font-size: 16px;
         line-height: 26px;
         padding: 0px 8px;
         background-color: white;
-        margin: 0px;
-    }
+        text-align: center; ;color: teal;
+        margin: 10px; padding: 10px;">Tapcode Team</h2>
 
-    p {
-        font-size: 16px;
-        line-height: 26px;
-        padding: 0px 8px;
-        margin: 0px;
-    }
-
-    hr {
-        width: 100%;
-        margin: 0px;
-        margin-top: 16px;
-        border-top: 1px solid teal;
-    }
-
-    .margin-base {
-        margin-top: 3px;
-    }
-
-    .margin-padding {
-        margin-top: 16px;
-    }
-
-    </style>
-</head>
-
-<body>
-    <div style="align-items: flex-start;margin: 10px;">
-        <div style="flex-direction: row; 
-        align-items: center;
-        margin: 0px 20px;">
-            <img src="https://raw.githubusercontent.com/LayThankTon/resume_templates/main/asset/taplogo512.png"
-            width="80" height="80" >
-            <h1>Tapcode</h1>
-        </div>
-        <hr>
-        <div style="margin: 10px 20px;">
-            <h2 style="text-align: center; text-transform: uppercase;color: teal;">Welcome to the resume creator app</h2>
-            <p class="margin-padding">Your verification code is:</p>
-            <h1 style="text-align: center;  background: teal; text-decoration: none; color: white; padding: 10px 20px; margin: 10px 0; display: inline-block; border-radius: 10px;">123456</h1>
-        </div>
-        <div style="background-color: #c8d8e4 ; color: black; margin: 10px 20px; border-radius: 5px; padding: 10px;">
-            <p class="margin-base">Once your account is activated, you can start using all the features of the Resume Creator App.</p>
-            <p class="margin-base">You received this email because you recently created a new Tapcode account or requested a password reset. If this is not you, please ignore this email.</p>
-            <p class="margin-base">If you have any questions, please contact help@tapcode.cf</p>
-
-        </div>
-        <hr>
-        <h2 style="margin: 10px; padding: 10px;">Tapcode Team</h2>
     </div>
+
 </body>
 
 </html>
