fix citizen name

--- a/en/broccoli.html
+++ b/en/broccoli.html
@@ -172,7 +172,7 @@
                     </li>
                     <li>
                         <span>Citizen ID</span>
-                        <span>{citizenID}</span>
+                        <span>{citizen_id}</span>
                     </li>
                     <li>
                         <span>gender</span>
