--- a/vi/berries.html
+++ b/vi/berries.html
@@ -192,7 +192,7 @@
         ">
             <div style=" flex-direction: row;">
                 <div class="icon" style="margin-bottom: 8px;">
-                    <img style="border-radius: 100px;border: 1px solid white;"
+                    <img style="border-radius: 50%;" 
                     src= "https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png"
                     alt="Avatar" width="100" height="100">
                 </div>
@@ -268,7 +268,7 @@
             </div>
             <ul class="margin-base">
                 <li><span>- Du lịch.</span></li>
-                <li><span>- Chụp ánh.</span></li>
+                <li><span>- Chụp ảnh.</span></li>
             </ul>
         </div>
 
@@ -325,7 +325,7 @@
             </ul>
             <hr>
             <h2 class="title margin-padding">ngoại ngữ</h2>
-            <ul class="profile language margin-base" style="width: 100%;">
+            <ul class="profile language margin-base">
                 <li >
                     <h3 class="margin-base" >tiếng anh</h3>
                     <div>
