--- a/base.html
+++ b/base.html
@@ -11,7 +11,7 @@
     body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: white;
-        color: teal;
+        color: #264143;
         margin: 0px;
         padding: 0px;
     }
@@ -70,14 +70,14 @@
     div.icon {
         padding: 8px;
         border-radius: 100px;
-        background-color: teal;
+        background-color: #264143;
     }
 
     hr {
         width: 100%;
         margin: 0px;
         margin-top: 16px;
-        border-top: 1px solid teal;
+        border-top: 1px solid #264143;
     }
 
     ul {
@@ -85,6 +85,7 @@
         padding: 0px;
         list-style-type: none;
         align-self: flex-start;
+        width: 100%;
     }
 
     ul li {
@@ -103,15 +104,26 @@
     }
 
     ul.profile.myself li span:nth-child(1) {
-        width: 80px;
+        min-width: 60px;
+        max-width: 150px;
+    }
+
+    ul.profile.language li {
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     ul.profile.language li span:nth-child(1) {
-        width: 80px;
+        width: 100%;
+        margin-top: 8px;
+    }
+
+    ul.profile.language li div {
+        width: 100%;
     }
 
     div.bar-border {
-        width: 200px;
+        width: 100%;
         height: 10px;
         align-items: flex-start;
         border-radius: 100px;
@@ -121,7 +133,7 @@
 
     div.bar-score {
         height: 10px;
-        background-color: teal;
+        background-color: #264143;
     }
 
     .margin-base {
@@ -137,6 +149,15 @@
         height: 20px;
     }
 
+    li.timeline {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    p {
+        margin: 0;
+    }
+
     </style>
 </head>
 
@@ -145,12 +166,12 @@
         <div style="
         width: 40%;
         padding: 24px 12px 24px 8px;
-        border: 0px solid teal;
+        border: 0px solid #264143;
         border-right-width: 1px;
         ">
             <div class="icon" style="margin-bottom: 8px;">
-                <img style="border-radius: 100px;border: 1px solid white;" 
-                src= "https://res.cloudinary.com/good-assistant/image/upload/v1625845365/avatar/jxvswvdssyjedva5eql7.jpg"
+                <img style="border-radius: 50%;" 
+                src= "https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png"
                 alt="Avatar" width="100" height="100">
             </div>
             <hr>
@@ -187,8 +208,8 @@
                     <span>09543225439</span>
                 </li>
                 <li>
-                    <span>Địa chi</span>
-                    <span>44 Hoàng Văn Thụ, khu phố 2, phường Bình Trị Thiên, Quận 4, Thành phố Hồ Chí Minh</span>
+                    <span>Địa chỉ</span>
+                    <span>44 Hoàng Văn Thụ, khu phố 2, phường Bình Trị Thiên</span>
                 </li>
             </ul>
             <div class="icon margin-padding">
@@ -201,12 +222,8 @@
             <hr>
             <h2 class="title">KỸ NĂNG</h2>
             <ul class="margin-base">
-                <li><span>làm việc nhóm</span></li>
-                <li><span>Tự học</span></li>
                 <li><span>word</span></li>
                 <li><span>photoshop</span></li>
-                <li><span>Python</span></li>
-                <li><span>react native</span></li>
             </ul>
             <div class="icon margin-padding">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 48 48">
@@ -215,7 +232,9 @@
             <hr>
             <h2 class="title">sở THÍCH</h2>
             <ul class="margin-base">
-                <li><span>Du lịch, chụp ánh.</span></li>
+                <li><span>Du lịch.</span></li>
+                <li><span>chụp ảnh.</span></li>
+
             </ul>
             <div class="icon margin-padding">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32">
@@ -232,19 +251,19 @@
             <h2 class="title">NGƯỜI THAM KHẢO</h2>
             <ul class="profile margin-base">
                 <li>
-                    <h3>NGUYÊN VĂN B</h3>
+                    <h3>Tân Logic</h3>
                 </li>
                 <li>
                     <span>Công ty</span>:
-                    <span>Công ty CP ABC</span>
+                    <span>Tapcode</span>
                 </li>
                 <li>
                     <span>chức vụ</span>:
-                    <span>Phó giám đốc</span>
+                    <span>Tác giả</span>
                 </li>
                 <li>
                     <span>Email</span>:
-                    <span>nguyenvanb@gmail.com</span>
+                    <span>help@tapcode.cf</span>
                 </li>
                 <li>
                     <span>Điện thoại</span>:
@@ -271,20 +290,20 @@
             <hr>
             <h2 class="title">kinh nghiệm</h2>
             <ul class="profile margin-base">
-                <li>
-                    <h3 class="margin-base">03-2015 - 02-2016 : TEAM LEAD</h3>
-                </li>
-                <li>
-                    <span>Công ty</span>:
-                    <span>Công ty CP ABC</span>
-                </li>
-                <li>
-                    <span>Mô tả công việc</span>:
-                    <span>Đảm bảo doanh số thị trường được phân công. Mở rộng thị trường tìm đối tác mói. Lập kế hoạch kinh doanh theo tuần, tháng, quý.</span>
-                </li>
-                <li>
-                    <span>Thành tích đạt được</span>:
-                    <span>Duy trì mối quan hệ giữa công ty và đối tác. Tổng hợp, phân tích báo cáo từ nhân viên kinh doanh và nhân viên chăm sóc khách hàng từ đó lập kế hoạch kinh doanh cụ thể cho Team.</span>
+                <li class="timeline">
+                    <span class="margin-base">03-2015 - 02-2016 : TEAM LEAD</span>
+                    <p>
+                        <span>Công ty</span>:
+                        <span>Công ty CP ABC</span>
+                    </p>
+                    <p>
+                        <span>Mô tả công việc</span>:
+                        <span>Đảm bảo doanh số thị trường được phân công. Mở rộng thị trường tìm đối tác mói. Lập kế hoạch kinh doanh theo tuần, tháng, quý.</span>
+                    </p>
+                    <p>
+                        <span>Thành tích đạt được</span>:
+                        <span>Duy trì mối quan hệ giữa công ty và đối tác. Tổng hợp, phân tích báo cáo từ nhân viên kinh doanh và nhân viên chăm sóc khách hàng từ đó lập kế hoạch kinh doanh cụ thể cho Team.</span>
+                    </p>
                 </li>
             </ul>
             <div class="icon margin-padding">
@@ -298,7 +317,7 @@
             <h2 class="title">học vấn</h2>
             <ul class="profile margin-base">
                 <li>
-                    <h3 class="margin-base">07-2011 - 01 -2015 : HỌC VIỆN TÀI CHÍNH</h3>
+                    <h3 class="margin-base">07-2011 - 01-2015 : HỌC VIỆN TÀI CHÍNH</h3>
                 </li>
                 <li>
                     <span>chuyên ngành</span>:
@@ -321,33 +340,33 @@
             <hr>
             <h2 class="title">ngoại ngữ</h2>
             <ul class="profile language margin-base">
-                <li>
+                <li >
                     <h3 class="margin-base" >tiếng anh</h3>
-                </li>
-                <li>
-                    <span>nghe</span>
-                    <div class="bar-border">
-                        <div class="bar-score" style="width: 80%;"></div>
+                    <div>
+                        <span>nghe</span>
+                        <div class="bar-border">
+                            <div class="bar-score" style="width: 90%;"></div>
+                        </div>
                     </div>
-                </li>
-                <li>
-                    <span>nói</span>
-                    <div class="bar-border">
-                        <div class="bar-score" style="width: 90%;"></div>
-                    </div>
+                    <div>
+                        <span>nói</span>
+                        <div class="bar-border">
+                            <div class="bar-score" style="width: 90%;"></div>
+                        </div>
 
-                </li>
-                <li>
-                    <span>đọc</span>
-                    <div class="bar-border">
-                        <div class="bar-score" style="width: 100%;"></div>
                     </div>
+                    <div>
+                        <span>đọc</span>
+                        <div class="bar-border">
+                            <div class="bar-score" style="width: 90%;"></div>
+                        </div>
 
-                </li>
-                <li>
-                    <span>viết</span>
-                    <div class="bar-border">
-                        <div class="bar-score" style="width: 69%;"></div>
+                    </div>
+                    <div>
+                        <span>viết</span>
+                        <div class="bar-border">
+                            <div class="bar-score" style="width: 90%;"></div>
+                        </div>
                     </div>
                 </li>
             </ul>
