--- a/vi/berries.html
+++ b/vi/berries.html
@@ -196,7 +196,7 @@
             <div style=" flex-direction: row;">
                 <div class="icon" style="margin-bottom: 8px;">
                     <img style="border-radius: 50%;" 
-                    src= "https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png"
+                    src="{avatar_image}" 
                     alt="Avatar" width="100" height="100">
                 </div>
                 <div style="margin-left: 24px; align-items: flex-start;">
