--- a/vi/berries.html
+++ b/vi/berries.html
@@ -73,7 +73,6 @@
     }
 
     hr {
-        align-self: stretch;
         margin: 0px;
         margin-top: 16px;
         background-color: white;
@@ -83,12 +82,10 @@
         margin: 0px;
         padding: 0px;
         list-style-type: none;
-        align-self: flex-start;
     }
 
     ul li {
         display: flex;
-        align-items: center;
         font-size: 12px;
         line-height: 22px;
     }
@@ -108,7 +105,6 @@
 
     ul.profile.language li {
         flex-direction: column;
-        align-items: flex-start;
     }
 
     ul.profile.language li span:nth-child(1) {
@@ -192,7 +188,7 @@
                     src="{avatar_image}" 
                     alt="Avatar" width="100" height="100">
                 </div>
-                <div style="margin-left: 24px; align-items: flex-start;">
+                <div style="margin-left: 24px; ">
                     <h1 class="title" style="transform: scale(1, 1.2);">{name}</h1>
                     <h2 style="transform: scale(1, 1.1);">{job}</h2>
 
@@ -237,8 +233,8 @@
         </div>
 
 
-        <div style=" width: 30%;  align-items: center; padding: 24px 8px 24px 12px; color:white; background-color: var(--main-color);">
-            <h2 class="title">thông tin</h2>
+        <div style=" width: 30%; padding: 24px 8px 24px 12px; color:white; background-color: var(--main-color);">
+            <h2 class="title" style="align-self: center; ">thông tin</h2>
             <ul class="profile myself margin-base">
                 <li>
                     <span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"><path d="M28 6H4a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h24a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2zm-2.2 2L16 14.78L6.2 8zM4 24V8.91l11.43 7.91a1 1 0 0 0 1.14 0L28 8.91V24z" fill="currentColor"/></svg></span>
@@ -266,12 +262,12 @@
                 </li>
             </ul>
             <hr>
-            <h2 class="title margin-padding">KỸ NĂNG</h2>
+            <h2 class="title margin-padding" style="align-self: center; ">KỸ NĂNG</h2>
             <ul class="profile language margin-base">
                 {skills}
             </ul>
             <hr>
-            <h2 class="title margin-padding">ngoại ngữ</h2>
+            <h2 class="title margin-padding" style="align-self: center; ">ngoại ngữ</h2>
             <ul class="profile language margin-base">
                 {foreign_languages}
             </ul>
