--- a/en/broccoli.html
+++ b/en/broccoli.html
@@ -173,7 +173,7 @@
         border-right-width: 1px;
         ">
             <div class="icon" style="margin-bottom: 8px;">
-                <img style="border-radius: 100px;border: 1px solid white;" 
+                <img style="border-radius: 50%;"
                 src="{avatar_image}" 
                 alt="Avatar" width="100" height="100">
             </div>
