--- a/base.html
+++ b/base.html
@@ -8,18 +8,22 @@
     <title>TapCode App</title>
 
     <style>
+    :root {
+        --main-color: #5f2c3e;
+    }
     body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: white;
-        color: #264143;
+        color: var(--main-color);
         margin: 0px;
         padding: 0px;
+        align-items: stretch;
     }
 
     div {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: stretch;
         justify-content: flex-start;
     }
 
@@ -70,14 +74,15 @@
     div.icon {
         padding: 8px;
         border-radius: 100px;
-        background-color: #264143;
+        background-color: var(--main-color);
+        align-self: center;
     }
 
     hr {
         width: 100%;
         margin: 0px;
         margin-top: 16px;
-        border-top: 1px solid #264143;
+        border-top: 1px solid var(--main-color);
     }
 
     ul {
@@ -90,7 +95,6 @@
 
     ul li {
         display: flex;
-        align-items: center;
         font-size: 12px;
         line-height: 22px;
     }
@@ -110,7 +114,6 @@
 
     ul.profile.language li {
         flex-direction: column;
-        align-items: flex-start;
     }
 
     ul.profile.language li span:nth-child(1) {
@@ -133,7 +136,7 @@
 
     div.bar-score {
         height: 10px;
-        background-color: #264143;
+        background-color: var(--main-color);
     }
 
     .margin-base {
@@ -162,11 +165,11 @@
 </head>
 
 <body>
-    <div style="flex-direction: row; align-items: flex-start;">
+    <div style="flex-direction: row;">
         <div style="
         width: 40%;
         padding: 24px 12px 24px 8px;
-        border: 0px solid #264143;
+        border: 0px solid var(--main-color);
         border-right-width: 1px;
         ">
             <div class="icon" style="margin-bottom: 8px;">
@@ -175,7 +178,7 @@
                 alt="Avatar" width="100" height="100">
             </div>
             <hr>
-            <h1  class="title">NGUYỄN Vân b</h1>
+            <h1  class="title" style="align-self: center; ">NGUYỄN Vân b</h1>
             <h3 style="align-self: center;">nhân viên hệ thống thông tin</h3>
             <div class="icon margin-padding">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
@@ -185,7 +188,7 @@
                 </svg>
             </div>
             <hr>
-            <h2 class="title">thông tin</h2>
+            <h2 class="title" style="align-self: center; ">thông tin</h2>
             <ul class="profile myself margin-base">
                 <li>
                     <span>Email</span>
@@ -220,8 +223,12 @@
                 </svg>
             </div>
             <hr>
-            <h2 class="title">KỸ NĂNG</h2>
+            <h2 class="title" style="align-self: center; ">KỸ NĂNG</h2>
             <ul class="margin-base">
+                <li><span>Tự học</span></li>
+                <li><span>Làm việc nhóm</span></li>
+                <li><span>Python</span></li>
+                <li><span>React native</span></li>
                 <li><span>word</span></li>
                 <li><span>photoshop</span></li>
             </ul>
@@ -230,7 +237,7 @@
                     <path d="M15 8C8.925 8 4 12.925 4 19c0 11 13 21 20 23.326C31 40 44 30 44 19c0-6.075-4.925-11-11-11c-3.72 0-7.01 1.847-9 4.674A10.987 10.987 0 0 0 15 8z" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" fill="none" /></svg>
             </div>
             <hr>
-            <h2 class="title">sở THÍCH</h2>
+            <h2 class="title" style="align-self: center; ">sở THÍCH</h2>
             <ul class="margin-base">
                 <li><span>Du lịch.</span></li>
                 <li><span>chụp ảnh.</span></li>
@@ -248,7 +255,7 @@
                     <path d="M16 16a7 7 0 1 1 7-7a7 7 0 0 1-7 7zm0-12a5 5 0 0 0-5 5a5 5 0 0 0 10 0a5 5 0 0 0-5-5z" fill="white" /></svg>
             </div>
             <hr>
-            <h2 class="title">NGƯỜI THAM KHẢO</h2>
+            <h2 class="title" style="align-self: center; ">NGƯỜI THAM KHẢO</h2>
             <ul class="profile margin-base">
                 <li>
                     <h3>Tân Logic</h3>
@@ -277,7 +284,7 @@
                     <path d="M11 2v2.07A8.002 8.002 0 0 0 4.07 11H2v2h2.07A8.002 8.002 0 0 0 11 19.93V22h2v-2.07A8.002 8.002 0 0 0 19.93 13H22v-2h-2.07A8.002 8.002 0 0 0 13 4.07V2m-2 4.08V8h2V6.09c2.5.41 4.5 2.41 4.92 4.91H16v2h1.91c-.41 2.5-2.41 4.5-4.91 4.92V16h-2v1.91C8.5 17.5 6.5 15.5 6.08 13H8v-2H6.09C6.5 8.5 8.5 6.5 11 6.08M12 11a1 1 0 0 0-1 1a1 1 0 0 0 1 1a1 1 0 0 0 1-1a1 1 0 0 0-1-1z" fill="white" /></svg>
             </div>
             <hr>
-            <h2 class="title">MỤC TIÊU</h2>
+            <h2 class="title" style="align-self: center; ">MỤC TIÊU</h2>
             <ul class="margin-base">
                 <li><span>- Được làm việc trong môi trường chuyên nghiệp.</span></li>
                 <li><span>-	Được hưởng các chế độ theo luật lao động.</span></li>
@@ -288,7 +295,7 @@
                     <path d="M928 444H820V330.4c0-17.7-14.3-32-32-32H473L355.7 186.2a8.15 8.15 0 0 0-5.5-2.2H96c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h698c13 0 24.8-7.9 29.7-20l134-332c1.5-3.8 2.3-7.9 2.3-12c0-17.7-14.3-32-32-32zM136 256h188.5l119.6 114.4H748V444H238c-13 0-24.8 7.9-29.7 20L136 643.2V256zm635.3 512H159l103.3-256h612.4L771.3 768z" fill="white" /></svg>
             </div>
             <hr>
-            <h2 class="title">kinh nghiệm</h2>
+            <h2 class="title" style="align-self: center; ">kinh nghiệm</h2>
             <ul class="profile margin-base">
                 <li class="timeline">
                     <span class="margin-base">03-2015 - 02-2016 : TEAM LEAD</span>
@@ -314,7 +321,7 @@
 
             </div>
             <hr>
-            <h2 class="title">học vấn</h2>
+            <h2 class="title" style="align-self: center; ">học vấn</h2>
             <ul class="profile margin-base">
                 <li>
                     <h3 class="margin-base">07-2011 - 01-2015 : HỌC VIỆN TÀI CHÍNH</h3>
@@ -338,7 +345,7 @@
                     <path d="M272 320c-.25-.19-20.59-15.77-45.42-42.67c39.58-53.64 62-114.61 71.15-143.33H352V90H214V48h-44v42H32v44h219.25c-9.52 26.95-27.05 69.5-53.79 108.36c-32.68-43.44-47.14-75.88-47.33-76.22L143 152l-38 22l6.87 13.86c.89 1.56 17.19 37.9 54.71 86.57c.92 1.21 1.85 2.39 2.78 3.57c-49.72 56.86-89.15 79.09-89.66 79.47L64 368l23 36l19.3-11.47c2.2-1.67 41.33-24 92-80.78c24.52 26.28 43.22 40.83 44.3 41.67L255 362z" fill="white" /></svg>
             </div>
             <hr>
-            <h2 class="title">ngoại ngữ</h2>
+            <h2 class="title" style="align-self: center; ">ngoại ngữ</h2>
             <ul class="profile language margin-base">
                 <li >
                     <h3 class="margin-base" >tiếng anh</h3>
